feat: install i18next, add language files for english and norwegian, and test usage

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@types/prettier": "^3.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "i18next": "^23.8.2",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
