--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@types/prettier": "^3.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "eslint-config-prettier": "^9.1.0",
     "i18next": "^23.8.2",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.5"
+    "react-i18next": "^14.0.5",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
