--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.9",
     "@types/prettier": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
     "eslint-config-prettier": "^9.1.0",
